--- a/AI/AI.vcxproj
+++ b/AI/AI.vcxproj
@@ -137,26 +137,16 @@
     <ClCompile Include="Source\A2SceneLevel3.cpp" />
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
-    <ClCompile Include="Source\Entities\GenericProjectileEntity.cpp" />
-    <ClCompile Include="Source\Entities\GenericWanderEntity.cpp" />
-    <ClCompile Include="Source\Entities\NState.cpp" />
-    <ClCompile Include="Source\Entities\NSM.cpp" />
-    <ClCompile Include="Source\Entity.cpp" />
     <ClCompile Include="Source\EntityButSmallerSize.cpp" />
     <ClCompile Include="Source\LoadOBJ.cpp" />
     <ClCompile Include="Source\LoadTGA.cpp" />
     <ClCompile Include="Source\main.cpp" />
-    <ClCompile Include="Source\Maze.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshBuilder.cpp" />
-    <ClCompile Include="Source\Messages.cpp" />
-    <ClCompile Include="Source\PostOffice.cpp" />
-    <ClCompile Include="Source\SceneA2BASESCENE.cpp" />
-    <ClCompile Include="Source\SceneA2EXAMPLECOPYTHISPLAGIARISM.cpp" />
-    <ClCompile Include="Source\SceneAssignmentCopyThis.cpp" />
+    <ClCompile Include="Source\A2BaseScene.cpp" />
+    <ClCompile Include="Source\A2SceneLevel1.cpp" />
     <ClCompile Include="Source\SceneBase.cpp" />
     <ClCompile Include="Source\shader.cpp" />
-    <ClCompile Include="Source\Tracker.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
     <ClCompile Include="Source\World.cpp" />
   </ItemGroup>
@@ -165,33 +155,23 @@
     <ClInclude Include="Source\A2SceneLevel3.h" />
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Camera.h" />
-    <ClInclude Include="Source\csv.h" />
-    <ClInclude Include="Source\Entities\GenericProjectileEntity.h" />
-    <ClInclude Include="Source\Entities\GenericWanderEntity.h" />
-    <ClInclude Include="Source\Entities\NState.h" />
-    <ClInclude Include="Source\Entities\NSM.h" />
-    <ClInclude Include="Source\Entity.h" />
     <ClInclude Include="Source\EntityButSmallerSize.h" />
     <ClInclude Include="Source\Geometry.h" />
     <ClInclude Include="Source\Light.h" />
     <ClInclude Include="Source\LoadOBJ.h" />
     <ClInclude Include="Source\LoadTGA.h" />
     <ClInclude Include="Source\Material.h" />
-    <ClInclude Include="Source\Maze.h" />
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshBuilder.h" />
     <ClInclude Include="Source\Message.h" />
-    <ClInclude Include="Source\Messages.h" />
     <ClInclude Include="Source\ObjectBase.h" />
     <ClInclude Include="Source\PostOffice.h" />
     <ClInclude Include="Source\Scene.h" />
-    <ClInclude Include="Source\SceneA2BASESCENE.h" />
-    <ClInclude Include="Source\SceneA2EXAMPLECOPYTHISPLAGIARISM.h" />
-    <ClInclude Include="Source\SceneAssignmentCopyThis.h" />
+    <ClInclude Include="Source\A2BaseScene.h" />
+    <ClInclude Include="Source\A2SceneLevel1.h" />
     <ClInclude Include="Source\SceneBase.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\stb_image.h" />
-    <ClInclude Include="Source\Tracker.h" />
     <ClInclude Include="Source\Utility.h" />
     <ClInclude Include="Source\Vertex.h" />
     <ClInclude Include="Source\World.h" />
